crates/swc_ecma_parser/tests/errors/duplicate_label/input.js
a: {
  a: {
    break a;
  }
  break a;
}